--- a/sidepanel/index.html
+++ b/sidepanel/index.html
@@ -42,7 +42,7 @@
           </button>
           <div class="control-buttons">
             <button id="retryButton" class="icon-button" title="Retry">♻️</button>
-            <button id="includePageButton" class="icon-button checkbox-button" title="Include Current Page">🌐</button>
+            <button id="includePageButton" class="icon-button checkbox-button active" title="Include Current Page">🌐</button>
             <button id="sendOnEnterButton" class="icon-button checkbox-button active" title="Send on Enter">⌨️</button>
             <button id="clearChatButton" class="icon-button" title="Clear Chat">❌</button>
           </div>
