--- a/sidepanel/index.html
+++ b/sidepanel/index.html
@@ -41,10 +41,21 @@
             <span class="mdc-button__label">Send</span>
           </button>
           <div class="control-buttons">
-            <button id="retryButton" class="icon-button" title="Retry">♻️</button>
-            <button id="includePageButton" class="icon-button checkbox-button active" title="Include Current Page">🌐</button>
-            <button id="sendOnEnterButton" class="icon-button checkbox-button active" title="Send on Enter">⌨️</button>
-            <button id="clearChatButton" class="icon-button" title="Clear Chat">❌</button>
+            <button id="retryButton" class="icon-button" title="Retry">
+              <img src="icons/refresh.svg" alt="Retry" class="icon-svg">
+            </button>
+            <button id="includePageButton" class="icon-button checkbox-button active" title="Include Current Page">
+              <img src="icons/document-user.svg" alt="Include Page" class="icon-svg">
+            </button>
+            <button id="sendOnEnterButton" class="icon-button checkbox-button active" title="Send on Enter">
+              <img src="icons/keyboard.svg" alt="Send on Enter" class="icon-svg">
+            </button>
+            <button id="stopButton" class="icon-button" title="Stop" disabled>
+              <img src="icons/stop.svg" alt="Stop" class="icon-svg">
+            </button>
+            <button id="clearChatButton" class="icon-button" title="Clear Chat">
+              <img src="icons/no-passage.svg" alt="Clear Chat" class="icon-svg">
+            </button>
           </div>
         </div>
       </div>
